# video-face-reference-builder

./: .gitignore  README.md  pyproject.toml  实施计划.md  架构设计.md  需求规格.md  项目大纲.md
docs/: candidate_04_feature_driven_flow.md  implementation_approach.md  result_feature_driven_flow.md
docs/cases/feature_driven_ai_assembly_20260611/: README.md
scripts/: align_mouth_landmarks_case.py  build_ai_curated_crops_case.py  build_candidate_guided_review_case.py  build_local_reference_case.py  build_strong_feature_reference_pack_case.py  composite_mouth_case.py  run_case.py  run_keyframe_selection.py  summarize_codeformer_case.py  try_insightface_case.py  try_mediapipe_facemesh_case.py  try_region_detectors_case.py
skills/ai-keyframe-selection/: SKILL.md
skills/video-face-reference-builder/: SKILL.md
skills/video-face-reference-builder/references/: feature_driven_assembly.md
src/vfrb/: __init__.py  auxiliary_enhancement.py  build_reference_boards.py  extract_frames.py  generate_report.py  keyframe_selection.py  local_reference.py  pipeline.py  score_frames.py  video_info.py
tests/: test_auxiliary_enhancement.py  test_extract_frames.py  test_generate_report.py  test_keyframe_selection.py  test_local_reference.py  test_pipeline.py  test_reference_boards.py  test_score_frames.py  test_video_info.py
